platform/kubernetes/base/account-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-service
  namespace: neobankx
  labels:
    app.kubernetes.io/name: account-service
    app.kubernetes.io/part-of: neobankx-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: account-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: account-service
        app.kubernetes.io/part-of: neobankx-platform
    spec:
      containers:
        - name: account-service
          image: account-service:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8082
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: neobankx
  labels:
    app.kubernetes.io/name: account-service
spec:
  selector:
    app.kubernetes.io/name: account-service
  ports:
    - name: http
      port: 8082
      targetPort: 8082
