platform/kubernetes/base/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: neobankx
  labels:
    app.kubernetes.io/name: api-gateway
    app.kubernetes.io/part-of: neobankx-platform
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: api-gateway
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api-gateway
        app.kubernetes.io/part-of: neobankx-platform
    spec:
      containers:
        - name: api-gateway
          image: api-gateway:0.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: neobankx
  labels:
    app.kubernetes.io/name: api-gateway
spec:
  selector:
    app.kubernetes.io/name: api-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
